# godofwar

./: .gitattributes  .gitignore  .replit  CMakeLists.txt  HANDOFF_AGENT.md  HANDOFF_HISTORICO.md  HANDOVER_TECNICO.md  MONETIZACAO_E_DIVULGACAO.md  auto_round.sh  build.sh  commit_bug_ar.sh  config.toml  git_push.sh  instalar_linux_mint.sh  jogar.sh  pyproject.toml  rebuild_runtime.sh  recompilar.sh  replit.md  replit.nix  replit_HISTORICO.md  setup_linux.sh  varredura_a0.py
.agents/: agent_assets_metadata.toml
GOD_PC_PORT_FINAL/: CMakeLists.txt
GOD_PC_PORT_FINAL/data/: 989NOMID.IRX  GODOFWAR.TOC  SCUS_973.99  SMPD_IOP.IRX  part1.paktgqhcxut.part
GOD_PC_PORT_FINAL/include/: ps2_config.h  ps2_recompiled_functions.h
GOD_PC_PORT_FINAL/src/: main.cpp  ps2_syscall_stubs.cpp  register_functions.cpp
GOD_PC_PORT_FINAL/src/recompiled/: FUN_00106180_0x106180.cpp  FUN_001061c8_0x1061c8.cpp  FUN_001061f8_0x1061f8.cpp  FUN_001064f0_0x1064f0.cpp  FUN_001067a8_0x1067a8.cpp  FUN_0010a908_0x10a908.cpp  FUN_0010a978_0x10a978.cpp  FUN_0010aac0_0x10aac0.cpp  FUN_0010acc8_0x10acc8.cpp  FUN_0010b390_0x10b390.cpp  FUN_0010ea90_0x10ea90.cpp  FUN_0010f670_0x10f670.cpp  FUN_0010fc88_0x10fc88.cpp  FUN_001107c0_0x1107c0.cpp  FUN_00111010_0x111010.cpp  FUN_00111328_0x111328.cpp  FUN_00117a50_0x117a50.cpp  FUN_0011ad58_0x11ad58.cpp  FUN_0011b3d8_0x11b3d8.cpp  FUN_0011bc20_0x11bc20.cpp  FUN_0011c168_0x11c168.cpp  FUN_0011c850_0x11c850.cpp  FUN_0011c8d0_0x11c8d0.cpp  FUN_0011cc58_0x11cc58.cpp  FUN_0011d2b8_0x11d2b8.cpp  FUN_0011d498_0x11d498.cpp  FUN_0011d4c8_0x11d4c8.cpp  FUN_0011d7e0_0x11d7e0.cpp  FUN_0011d8a0_0x11d8a0.cpp  FUN_0011e018_0x11e018.cpp  FUN_0011f278_0x11f278.cpp  FUN_0011f2a0_0x11f2a0.cpp  FUN_00120498_0x120498.cpp  FUN_00122060_0x122060.cpp  FUN_00122140_0x122140.cpp  FUN_00122220_0x122220.cpp  FUN_00122298_0x122298.cpp  FUN_00122430_0x122430.cpp  FUN_0012b168_0x12b168.cpp  FUN_0012ba00_0x12ba00.cpp  (+2765 more)
attached_assets/: Pasted--0029B638-0x29b638-cpp-o-100-Linking-CXX-static-library_1776875896662.txt  Pasted--1-Conclu-do-PS2-TRACE-1-bash-jogar-sh-2-1-tee-log-forc_1777140935587.txt  Pasted--Performing-Test-HAVE-SA-SIGACTION-Success-Looking-for-_1777086253014.txt  Pasted-A-lista-de-jogos-de-PS2-que-ganharam-ports-nativos-feit_1778032534117.txt  Pasted-Agent-Encontrei-algo-cr-tico-H-um-WaitSema-em-0x297ea0-_1777659951243.txt  Pasted-DOSSI-PRONTO-achado-important-ssimo-Cris-Sentar-pra-ler_1777560614652.txt  Pasted-PROGRESSO-ENORME-O-experimento-funcionou-Olha-o-que-mud_1776916858471.txt  Pasted-Tenho-o-quadro-completo-agora-O-hang-p-s-tick-115-dentr_1777861326475.txt  Pasted-apareceu-cristiano-cristiano-King-cd-Documentos-GitHub-_1776194225444.txt  Pasted-bash-build-sh-remote-Enumerating-objects-15-done-remote_1776918740507.txt  Pasted-cristiano-cristiano-1-V-o-processo-do-ar-consumindo-CPU_1777054150623.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-1-Push-s_1777988118602.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-Teste-A-_1777157337387.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-bash-aut_1778093380533.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-bash-rec_1777057526495.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-bash-rec_1777662638366.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777064054734.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777080804224.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777086097198.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777087389054.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777087674925.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777088680297.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777089652072.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777127684738.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777128212950.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777131304239.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777137501548.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777143285661.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777144551317.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777145176561.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777145898926.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777217980430.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777218681127.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777219505159.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777239558186.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777318166002.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777319674469.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777340132603.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777340808756.txt  Pasted-cristiano-cristiano-Documentos-GitHub-godofwar-cd-Docum_1777341272374.txt  (+63 more)
build_test/: cmake_install.cmake
data/: SYSTEM.CNF
include/: ps2_recompiled_functions.h  ps2_recompiled_stubs.h
runs_automaticos/: log_20260427_235906_7fcb060_filtered.txt  log_20260427_235906_7fcb060_full.txt  log_20260429_011641_7d6ba33_filtered.txt  (+143 more)
src/: main.cpp
(+2890 files in other folders)
